# aliyun-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.example.toml
.github/workflows/: ci.yaml
examples/: async_ecs_describe_regions.rs  async_sts_get_caller_identity.rs  blocking_sts_get_caller_identity.rs
src/: auth.rs  client.rs  error.rs  lib.rs  signing.rs  utils.rs
src/api/: billing.rs  ecs.rs  mod.rs  sts.rs
src/client/: async_client.rs  blocking_client.rs  common.rs  error.rs  mod.rs  utils.rs
src/client/sts/: caller_identity.rs  mod.rs
src/services/: billing.rs  ecs.rs  mod.rs  sts.rs
src/test_utils/: error.rs  mod.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs  retry.rs
src/types/: billing.rs  common.rs  ecs.rs  mod.rs  sts.rs
src/util/: mod.rs  redact.rs  rpc.rs  url.rs
tests/: async_http.rs  blocking_http.rs
